# ai-engineer-telco-churn

./: .gitignore  README.md  pyproject.toml  schemas.py
models/: trained_model.joblib
notebooks/: 01_initial_eda.ipynb
src/telco_churn/: pipeline.py  schemas.py  train.py  utils.py
tests/: test_utils.py
